--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -24,15 +25,6 @@
                 <img class="app__logo-image" src="/imagens/logo.png" alt="">
             </figure>
         </header>
-        <section class="app__section-banner-container">
-            <h1 class="app__title">
-                Otimize sua produtividade,<br>
-                <strong class="app__title-strong">mergulhe no que importa.</strong>
-            </h1>
-            <figure class="app__image-figure">
-                <img class="app__image" src="/imagens/foco.png" alt="">
-            </figure>
-        </section>
         <section class="app__section-card-container">
             <div class="app__card">
                 <ul class="app__card-list">
@@ -61,6 +53,10 @@
                     </li>
                 </ul>
                 <div class="app__card-primary-button-wrapper">
+                    <button id="start-pause" class="app__card-primary-button">
+                        <img class="app__card-primary-butto-icon" src="/imagens/play_arrow.png" alt="">
+                        <span>Começar</span>
+                    </button>
                     <button id="start-pause" class="app__card-primary-button">
                         <img class="app__card-primary-butto-icon" src="/imagens/play_arrow.png" alt="">
                         <span>Começar</span>
