--- a/index.html
+++ b/index.html
@@ -25,17 +25,29 @@
                 <img class="app__logo-image" src="/imagens/logo.png" alt="">
             </figure>
         </header>
+        <section class="app__section-banner-container">
+            <h1 class="app__title">
+                Otimize sua produtividade,<br>
+                <strong class="app__title-strong">mergulhe no que importa.</strong>
+            </h1>
+            <figure class="app__image-figure">
+                <img class="app__image" src="/imagens/foco.png" alt="">
+            </figure>
+        </section>
         <section class="app__section-card-container">
             <div class="app__card">
                 <ul class="app__card-list">
                     <li class="app__card-list-item">
-                        <button data-contexto="foco" class="app__card-button app__card-button--foco active">Foco</button>
+                        <button data-contexto="foco"
+                            class="app__card-button app__card-button--foco active">Foco</button>
                     </li>
                     <li class="app__card-list-item">
-                        <button data-contexto="short" class="app__card-button app__card-button--curto">Descanso curto</button>
+                        <button data-contexto="short" class="app__card-button app__card-button--curto">Descanso
+                            curto</button>
                     </li>
                     <li class="app__card-list-item">
-                        <button data-contexto="long" class="app__card-button app__card-button--longo">Descanso longo</button>
+                        <button data-contexto="long" class="app__card-button app__card-button--longo">Descanso
+                            longo</button>
                     </li>
                 </ul>
                 <div id="timer" class="app__card-timer"></div>
@@ -57,16 +69,52 @@
                         <img class="app__card-primary-butto-icon" src="/imagens/play_arrow.png" alt="">
                         <span>Começar</span>
                     </button>
-                    <button id="start-pause" class="app__card-primary-button">
-                        <img class="app__card-primary-butto-icon" src="/imagens/play_arrow.png" alt="">
-                        <span>Começar</span>
-                    </button>
                 </div>
+            </div>
+        </section>
+        <section class="app__section-task-container">
+            <div class="app__task">
+                <div class="current_task">
+                    <label>#Em andamento:</label>
+                    <p>-</p>
+                </div>
+                <div class="list_task_container">
+                    <div class="text_list_task">
+                        <h3>Lista de tarefas:</h3>
+                        <img class="more_option" src="/imagens/more_vert.svg" />
+                    </div>
+                    <ul id="list_task"></ul>
+                    <div class="card_add_task">
+                        <form>
+                            <h3>Adicionando tarefa</h3>
+                            <input type="text" placeholder="No que você está trabalhando?" />
+                            <button class="delete_button">
+                                <img src="/imagens/delete.svg">
+                                <span>Deletar</span>
+                            </button>
+                            <div>
+                                <button class="cancel_button">
+                                    <img src="/imagens/close.svg">
+                                    <span>Cancelar</span>
+                                </button>
+                                <button class="save_button">
+                                    <img src="/imagens/save.png">
+                                    <span>Salvar</span>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <button class="add_task">
+                    <img src="/imagens/Add_lilás.png" />
+                    <span>Adicionar nova tarefa</span>
+                </button>
             </div>
         </section>
         <footer class="app__footer">
             <p class="app__footer-text">
-                Projeto fictício e sem fins comerciais. Imagens geradas por IA no Adobe Firefly.Desenvolvido por Reinaldo Cicarone. 
+                Projeto fictício e sem fins comerciais. Imagens geradas por IA no Adobe Firefly.<br />Desenvolvido por
+                Alura.
             </p>
         </footer>
     </main>
