--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                                 placeholder="No que você está trabalhando?">
                                 No que você está trabalhando?
                             </textarea>
+                            <input type="text" class="index_task">
                             <div class="button_options">
                                 <button class="delete_button">
                                     <img src="/imagens/delete.svg">
