deletando roda pe alura

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
         </section>
         <footer class="app__footer">
             <p class="app__footer-text">
-                Projeto fictício e sem fins comerciais. Imagens geradas por IA no Adobe Firefly.<br />Desenvolvido por
-                Alura.
+                Projeto fictício e sem fins comerciais.
             </p>
         </footer>
     </main>
